Fixed BCs of MMAdminBundle

--- a/Resources/views/NodeRoute/edit.html.twig
+++ b/Resources/views/NodeRoute/edit.html.twig
@@ -8,13 +8,13 @@
         <div class="box-header"><h2 class="box-title">Route bearbeiten</h2></div>
         <div class="box-body">
             {% block admin_content %}
-                {{ form_start(form) }}
+                {{ form_start(data.form) }}
 
                 {% set buttongroup %}
                     <div class="form-actions clearfix">
-                        {{ form_widget(form.submit) }}
-                        {{ form_widget(form.save_and_add) }}
-                        {{ form_widget(form.save_and_back) }}
+                        {{ form_widget(data.form.submit) }}
+                        {{ form_widget(data.form.save_and_add) }}
+                        {{ form_widget(data.form.save_and_back) }}
 
                         <a class="btn btn-warning btn-abort" href="{{ path('mm_cmf_admin_routing_addon_noderoute') }}">
                             <i class="fa fa-close"></i> abbrechen
@@ -23,15 +23,15 @@
                 {% endset %}
 
                 <div class="form-main">
-                    {{ form_rest(form) }}
-                    {{ form_errors(form) }}
+                    {{ form_rest(data.form) }}
+                    {{ form_errors(data.form) }}
                 </div>
 
                 <div class="form-foot">
                     {{ buttongroup }}
                 </div>
 
-                {{ form_end(form) }}
+                {{ form_end(data.form) }}
             {% endblock %}
         </div>
     </div>
